<resources>
    <string name="app_name">GameCenter</string>
    <string name="title">GameCenter</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="remember_username">记住用户名</string>
    <string name="announce_to_friends">交友宣言</string>
    <string name="default_announcements">这个山头是属于我的，包括你在内！</string>
    <string name="to_be_continued">功能暂未实现，敬请等待</string>
    <!--应用模块的名字-->
    <string name="module_forget_password">忘记密码</string>
    <string name="module_app">应用程序</string>
</resources>
